--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,25 +15,11 @@ html(lang='en')
           block sidebar
             ul(class='sidebar-nav')
               li
-                a(href='/catalog') Home
+                a(href='/home') Home
               li
-                a(href='/catalog/books') All books
+                a(href='/home/create') Create IR
               li
-                a(href='/catalog/authors') All authors
-              li
-                a(href='/catalog/genres') All genres
-              li
-                a(href='/catalog/bookinstances') All book-instances
-              li
-                hr
-              li
-                a(href='/catalog/author/create') Create new author
-              li
-                a(href='/catalog/genre/create') Create new genre
-              li
-                a(href='/catalog/book/create') Create new book
-              li
-                a(href='/catalog/bookinstance/create') Create new book instance (copy)
+                a(href='/home/view') View IR
 
         div(class='col-sm-10')
           block content
