--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,6 +20,7 @@ html(lang='en')
                 a(href='/home/create') Create IR
               li
                 a(href='/home/view') View IR
-
+              li
+                a(href='/home/updated') Recently Updated IRs
         div(class='col-sm-10')
           block content
