--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,6 +21,6 @@ html(lang='en')
               li
                 a(href='/home/view') View IR
               li
-                a(href='/home/updated') Recently Updated IRs
+                a(href='/home/updated') Recently Updated
         div(class='col-sm-10')
           block content
